修改了一些bug

--- a/app/src/main/res/layout/util_relative_person.xml
+++ b/app/src/main/res/layout/util_relative_person.xml
@@ -29,7 +29,7 @@
                 />
 
         </LinearLayout>
-
+        <include layout="@layout/util_relationship" />
         <include  layout="@layout/util_floatingpopulation_property" />
 
         <LinearLayout
