--- a/app/src/main/res/layout/activity_personelinfoenty.xml
+++ b/app/src/main/res/layout/activity_personelinfoenty.xml
@@ -117,7 +117,7 @@
                     android:layout_marginRight="@dimen/personinfoleftSize"
                     android:layout_marginTop="@dimen/personinfotopSize"
                     android:ellipsize="end"
-                    android:singleLine="true"
+                    android:maxLines="1"
                     android:textSize="@dimen/textsize" />
             </LinearLayout>
 
