--- a/app/src/main/res/layout/activity_personelinfoenty.xml
+++ b/app/src/main/res/layout/activity_personelinfoenty.xml
@@ -6,7 +6,12 @@
     android:orientation="vertical">
 
     <include layout="@layout/util_head_view" />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
 
+    >
     <ScrollView
 
         android:layout_width="match_parent"
@@ -607,6 +612,41 @@
                 android:textColor="#0057F4" />
 
         </LinearLayout>
+
+
     </ScrollView>
 
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/blanchedalmond"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_next"-->
+
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+
+            <!--android:text="测试" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_last"-->
+
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentStart="true"-->
+           <!--/>-->
+    <!--</RelativeLayout>-->
+</LinearLayout>
+    <Button
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text = "测试"
+        />
 </LinearLayout>
