--- a/app/src/main/res/layout/activity_relativeperson.xml
+++ b/app/src/main/res/layout/activity_relativeperson.xml
@@ -5,7 +5,11 @@
     android:orientation="vertical">
 
     <include layout="@layout/util_head_view" />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
     <ScrollView
 
         android:layout_width="match_parent"
@@ -21,4 +25,7 @@
 
         </LinearLayout>
     </ScrollView>
+    </LinearLayout>
+
+    <include layout="@layout/util_ifly_beta" />
 </LinearLayout>
